--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
+    background-image: url('background.jpg'); 
+    background-size: cover;
+    background-repeat: no-repeat; 
+    background-attachment: fixed; 
 }
 
 header {
