--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,7 @@ footer .footer-bottom {
 
 /* Hyperlink Styling */
 .contact-box a {
-    color: #0047ab; /* White hyperlinks */
+    color: #00bfff; 
     text-decoration: none; /* Remove underline */
 }
 
