--- a/styles.css
+++ b/styles.css
@@ -41,24 +41,11 @@ main {
     text-align: center;
 }
 
-.slider {
-    position: relative;
+.slider img {
     width: 100%;
-    height: 300px; /* Adjust height as needed */
-    overflow: hidden;
-}
-
-.slider .slide {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    max-height: 300px;
     object-fit: cover;
-    opacity: 0; /* Make all images initially invisible */
-    transition: opacity 1s ease-in-out; /* Smooth fade effect */
-}
-
-.slider .slide.active {
-    opacity: 1; /* Show the active slide */
+    margin-bottom: 20px;
 }
 
 .categories {
